// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AudioRecorder renders default state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  style={undefined}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.8)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "height": 250,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 20,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "textAlign": "center",
            }
          }
        >
          Tap to record
        </Text>
        <View
          style={
            Array [
              Object {
                "width": 20,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <TouchableHighlight
            hitSlop={
              Object {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onPress={[Function]}
            testID="audio-recorder.cancel-btn"
          >
            <Image
              source={1}
              style={
                Object {
                  "tintColor": "#9FA9AF",
                }
              }
            />
          </TouchableHighlight>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EBEDEE",
              "borderRadius": 35,
              "height": 70,
              "justifyContent": "center",
              "width": 70,
            }
          }
        >
          <TouchableHighlight
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "red",
                "borderRadius": 32,
                "height": 64,
                "width": 64,
              }
            }
            testID="audio-recorder.record-btn"
          >
            <View />
          </TouchableHighlight>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AudioRecorder renders recording state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  style={undefined}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.8)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "height": 250,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 20,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "textAlign": "center",
            }
          }
        >
          00:00
        </Text>
        <View
          style={
            Array [
              Object {
                "width": 20,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <TouchableHighlight
            hitSlop={
              Object {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onPress={[Function]}
            testID="audio-recorder.cancel-btn"
          >
            <Image
              source={1}
              style={
                Object {
                  "tintColor": "#9FA9AF",
                }
              }
            />
          </TouchableHighlight>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EBEDEE",
              "borderRadius": 35,
              "height": 70,
              "justifyContent": "center",
              "width": 70,
            }
          }
        >
          <TouchableHighlight
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "red",
                "height": 35,
                "width": 35,
              }
            }
            testID="audio-recorder.stop-btn"
          >
            <View />
          </TouchableHighlight>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AudioRecorder renders reset state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  style={undefined}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.8)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "height": 250,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 20,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "textAlign": "center",
            }
          }
        >
          Tap to record
        </Text>
        <View
          style={
            Array [
              Object {
                "width": 20,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <TouchableHighlight
            hitSlop={
              Object {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onPress={[Function]}
            testID="audio-recorder.cancel-btn"
          >
            <Image
              source={1}
              style={
                Object {
                  "tintColor": "#9FA9AF",
                }
              }
            />
          </TouchableHighlight>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#EBEDEE",
              "borderRadius": 35,
              "height": 70,
              "justifyContent": "center",
              "width": 70,
            }
          }
        >
          <TouchableHighlight
            onPress={[Function]}
            style={
              Object {
                "backgroundColor": "red",
                "borderRadius": 32,
                "height": 64,
                "width": 64,
              }
            }
            testID="audio-recorder.record-btn"
          >
            <View />
          </TouchableHighlight>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`AudioRecorder renders stopped state 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  style={undefined}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "backgroundColor": "rgba(0,0,0,0.8)",
        "flex": 1,
        "flexDirection": "column",
        "justifyContent": "flex-end",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F5F5F5",
          "height": 250,
          "justifyContent": "space-around",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "marginHorizontal": 8,
            "marginTop": 10,
          }
        }
      >
        <View
          style={
            Object {
              "width": 20,
            }
          }
        >
          <TouchableHighlight
            hitSlop={
              Object {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onPress={[Function]}
            testID="audio-recorder.reset-btn"
          >
            <Image
              source={1}
              style={
                Object {
                  "tintColor": "#9FA9AF",
                }
              }
            />
          </TouchableHighlight>
        </View>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Object {
              "flex": 1,
              "textAlign": "center",
            }
          }
        >
          00:00
        </Text>
        <View
          style={
            Array [
              Object {
                "width": 20,
              },
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <TouchableHighlight
            hitSlop={
              Object {
                "bottom": 8,
                "left": 8,
                "right": 8,
                "top": 8,
              }
            }
            onPress={[Function]}
            testID="audio-recorder.cancel-btn"
          >
            <Image
              source={1}
              style={
                Object {
                  "tintColor": "#9FA9AF",
                }
              }
            />
          </TouchableHighlight>
        </View>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "backgroundColor": "#374A59",
              "borderRadius": 6,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 14,
              "paddingVertical": 8,
            }
          }
          testID="audio-recorder.done-btn"
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "white",
                  "fontSize": 16,
                }
              }
            >
              Done
            </Text>
          </View>
        </TouchableHighlight>
      </View>
    </View>
  </View>
</Modal>
`;
